2004-02-13  Scott Dattalo  <scott@dattalo.com>
	* gui/gui_scope.cc: - new file that will support a simple waveform viewer.
	* gui/Makefile.am: add the gui_scope.cc to the list
	* gui/gui_regwin.cc: Check for null pointers
	* gui/gui_symbols.cc: Check for null pointers
	* src/pic-processor.cc, src/p16x5x.h, src/p12x.h, src/p12x.cc,
	src/14bit-registers.h, src/14bit-registers.cc, src/14bit-processors.cc,
	src/12bit-processors.h, src/12bit-processors.cc
	Added FSR_12 - a new class for the 12-bit core. I also redesigned the
	way FSR and INDF interact.
	* src/p18x.cc - the 18f252 package pins weren't defined.
	
2004-02-13  Scott Dattalo  <scott@dattalo.com>
	* src/processor.cc, src/processor.h, src/pic-processor.cc, src/cod.cc:
	Support for new file context
	* gui/gui_src_asm.cc, gui/gui_profile.cc:
	Use the new file context code.
	
2004-02-12  Scott Dattalo  <scott@dattalo.com>
	* src/interface.cc, src/interface.h:
	Finally, the C-style interface is gone (or nearly gone).
	* src/processor.cc, src/processor.h, src/cod.cc
	Redesigning the "file_context" object.
	* gui/gui_watch.cc, gui/gui_profile.cc: 
	Removed final traces of the old C-style interface.

2004-02-11  Scott Dattalo  <scott@dattalo.com>
	* gui/gui_symbols.cc: - changed strndup to a strcpy (plus malloc...):
	
2004-02-11  Scott Dattalo  <scott@dattalo.com>
	* gui/* changed calls to gpsim_* to the C++ interface.
	* src/interface.cc - removed many of the gpsim_* functions
	* src/stimuli.cc, cli/cmd_set.cc - changed calls to gpsim_* to
	the C++ interface.
	
2004-02-10  Scott Dattalo  <scott@dattalo.com>
	* src/processor.cc, src/processor.h, src/pic-processor.cc, src/pic-processor.h:
	Added step, run, and finish members to the ProgramMemoryAccess class
	* src/interface.cc, gui/gui*
	removed more gpsim_* functions from interface.cc
	
2004-02-10  Scott Dattalo  <scott@dattalo.com>
	* gui/gui_symbol.cc, src/symbol.h, src/symbol.cc
	Cleaned up symbol api.
	
2004-02-09  Scott Dattalo  <scott@dattalo.com>
	* all files!